--- a/wedguide.html
+++ b/wedguide.html
@@ -750,6 +750,10 @@
             opacity: 1;
             color: #3a99d8;
           }
+          .year:hover {
+            color: #3a99d8;
+          }
+          }
         </style>
       </section>
       <!-- Wedding Details End -->
