Finalize Website Working Shit!!

--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                         <a href="#rsvp">RSVP</a>
                       </li>
                       <li>
+                        <a href="#location">Location</a>
+                      </li>
+                      <li>
                         <a href="#weddetails">Guide</a>
                       </li>
                     </ul>
@@ -167,7 +170,7 @@
                       class="slide-text wow fadeInUp"
                       data-wow-duration="1600ms"
                     >
-                      <p>We Are Getting Married January 24, 2026</p>
+                      <p>We Are Getting Married January 16, 2026</p>
                       <h2>#KhelFaondtheOne</h2>
                     </div>
                     <div
@@ -502,10 +505,11 @@
                   <span>12 Oct, 2026</span>
                   <h2>He proposed, She said yes</h2>
                   <p>
-                    Consectetur adipiscing elit. Fringilla at risus orci, tempus
-                    facilisi sed. Enim tortor, faucibus netus orci donec
-                    volutpat adipiscing. Sit condimentum elit convallis libero.
-                    Nunc in eu tellus ipsum placerat.
+                    Rochele’s had no idea that today would change our lives
+                    forever. Today, I get to call her my fiancée, and we start a
+                    new chapter together, hand in hand, heart to heart. Forever
+                    begins today, and I can’t wait to make every moment with you
+                    as magical as this one
                   </p>
                 </div>
               </div>
@@ -527,7 +531,7 @@
                   class="wpo-story-content-inner wow fadeInRightSlow"
                   data-wow-duration="1700ms"
                 >
-                  <span>24 Jan, 2026</span>
+                  <span>16 Jan, 2026</span>
                   <h2>Our Engagement Day</h2>
                   <p>
                     Faocci and his family came over to formally ask for my hand
@@ -1131,9 +1135,127 @@
         });
       </script>
 
+      <!-- Location Start-->
+      <section
+        class="wpo-event-section wpo-eventgu-section wedlu-section-padding"
+        id="location"
+      >
+        <div class="container">
+          <div class="wpo-section-title">
+            <span>Our Wedding</span>
+            <h2>When & Where</h2>
+          </div>
+          <div class="wpo-event-wrap">
+            <div class="row">
+              <div class="col col-lg-4 col-md-6 col-12">
+                <div
+                  class="wpo-event-item wow fadeInUp"
+                  data-wow-duration="1000ms"
+                >
+                  <div class="wpo-event-img">
+                    <div class="wpo-event-img-inner">
+                      <img src="assets/images/event/1.jpg" alt="" />
+                    </div>
+                  </div>
+                  <div class="wpo-event-text">
+                    <div class="title">
+                      <h2>The Preparation</h2>
+                    </div>
+                    <ul>
+                      <li>
+                        Friday, 16 Jan. 2026
+                        <br />
+                        4:00 AM – 3:00 PM
+                      </li>
+                      <li>Mamita Private Resort and Events Place</li>
+                      <li>(Baluarte, Mabalacat Pampanga)</li>
+                      <li>
+                        <a href="https://maps.app.goo.gl/uTQQQPpurWnJ6Xiv8"
+                          >See Location</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col col-lg-4 col-md-6 col-12">
+                <div
+                  class="wpo-event-item wow fadeInUp"
+                  data-wow-duration="1200ms"
+                >
+                  <div class="wpo-event-img">
+                    <div class="wpo-event-img-inner">
+                      <img src="assets/images/event/2.jpg" alt="" />
+                    </div>
+                  </div>
+                  <div class="wpo-event-text">
+                    <div class="title">
+                      <h2>The Ceremony</h2>
+                    </div>
+                    <ul>
+                      <li>
+                        Friday, 16 Jan. 2026
+                        <br />
+                        3:00 PM – 4:00 PM
+                      </li>
+                      <li>
+                        Iglesia Ni Cristo Lokal ng Madapdap, Distrito ng
+                        Pampanga North
+                      </li>
+                      <li>
+                        (Guagua Ave. Madapdap Resettlement Mabalacat City
+                        Pampanga)
+                      </li>
+                      <li>
+                        <a href="https://maps.app.goo.gl/vFtb5ARzZW43C2rf6"
+                          >See Location</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col col-lg-4 col-md-6 col-12">
+                <div
+                  class="wpo-event-item wow fadeInUp"
+                  data-wow-duration="1000ms"
+                >
+                  <div class="wpo-event-img">
+                    <div class="wpo-event-img-inner">
+                      <img src="assets/images/event/1.jpg" alt="" />
+                    </div>
+                  </div>
+                  <div class="wpo-event-text">
+                    <div class="title">
+                      <h2>The Reception</h2>
+                    </div>
+                    <ul>
+                      <li>
+                        Friday, 16 Jan. 2026
+                        <br />
+                        5:00 PM – 10:00 PM
+                      </li>
+                      <li>Mamita Private Resort and Events Place</li>
+                      <li>(Baluarte, Mabalacat Pampanga)</li>
+                      <li>
+                        <a href="https://maps.app.goo.gl/uTQQQPpurWnJ6Xiv8"
+                          >See Location</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end container -->
+      </section>
+      <!-- Location End-->
+
       <!-- Dress Code Start -->
 
-      <section class="wpo-service-section section-padding">
+      <section class="wpo-service-section wedgu-section-padding">
         <div class="container" id="weddetails">
           <div class="row justify-content-center text-center">
             <div class="col-xl-6 col-lg-8 col-md-10 col-12">
