--- a/wedguide.html
+++ b/wedguide.html
@@ -127,9 +127,6 @@
                         <a href="#gift">Gift</a>
                       </li>
                       <li>
-                        <a href="#location">Location</a>
-                      </li>
-                      <li>
                         <a href="#faqs">FAQs</a>
                       </li>
                     </ul>
@@ -753,7 +750,6 @@
           .year:hover {
             color: #3a99d8;
           }
-          }
         </style>
       </section>
       <!-- Wedding Details End -->
@@ -914,121 +910,6 @@
       </section>
       <!-- Gift Guide End -->
 
-      <!-- Location Start-->
-      <section class="wpo-event-section" id="location">
-        <div class="container">
-          <div class="wpo-section-title">
-            <span>Our Wedding</span>
-            <h2>When & Where</h2>
-          </div>
-          <div class="wpo-event-wrap">
-            <div class="row">
-              <div class="col col-lg-4 col-md-6 col-12">
-                <div
-                  class="wpo-event-item wow fadeInUp"
-                  data-wow-duration="1000ms"
-                >
-                  <div class="wpo-event-img">
-                    <div class="wpo-event-img-inner">
-                      <img src="assets/images/event/1.jpg" alt="" />
-                    </div>
-                  </div>
-                  <div class="wpo-event-text">
-                    <div class="title">
-                      <h2>The Preparation</h2>
-                    </div>
-                    <ul>
-                      <li>
-                        Saturday, 24 Jan. 2026
-                        <br />
-                        4:00 AM – 3:00 PM
-                      </li>
-                      <li>Mamita Private Resort and Events Place</li>
-                      <li>(Baluarte, Mabalacat Pampanga)</li>
-                      <li>
-                        <a href="https://maps.app.goo.gl/uTQQQPpurWnJ6Xiv8"
-                          >See Location</a
-                        >
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col col-lg-4 col-md-6 col-12">
-                <div
-                  class="wpo-event-item wow fadeInUp"
-                  data-wow-duration="1200ms"
-                >
-                  <div class="wpo-event-img">
-                    <div class="wpo-event-img-inner">
-                      <img src="assets/images/event/2.jpg" alt="" />
-                    </div>
-                  </div>
-                  <div class="wpo-event-text">
-                    <div class="title">
-                      <h2>The Ceremony</h2>
-                    </div>
-                    <ul>
-                      <li>
-                        Saturday, 24 Jan. 2026
-                        <br />
-                        3:00 PM – 4:00 PM
-                      </li>
-                      <li>
-                        Iglesia Ni Cristo Lokal ng Madapdap, Distrito ng
-                        Pampanga North
-                      </li>
-                      <li>
-                        (Guagua Ave. Madapdap Resettlement Mabalacat City
-                        Pampanga)
-                      </li>
-                      <li>
-                        <a href="https://maps.app.goo.gl/vFtb5ARzZW43C2rf6"
-                          >See Location</a
-                        >
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col col-lg-4 col-md-6 col-12">
-                <div
-                  class="wpo-event-item wow fadeInUp"
-                  data-wow-duration="1000ms"
-                >
-                  <div class="wpo-event-img">
-                    <div class="wpo-event-img-inner">
-                      <img src="assets/images/event/1.jpg" alt="" />
-                    </div>
-                  </div>
-                  <div class="wpo-event-text">
-                    <div class="title">
-                      <h2>The Reception</h2>
-                    </div>
-                    <ul>
-                      <li>
-                        Saturday, 24 Jan. 2026
-                        <br />
-                        5:00 PM – 10:00 PM
-                      </li>
-                      <li>Mamita Private Resort and Events Place</li>
-                      <li>(Baluarte, Mabalacat Pampanga)</li>
-                      <li>
-                        <a href="https://maps.app.goo.gl/uTQQQPpurWnJ6Xiv8"
-                          >See Location</a
-                        >
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- end container -->
-      </section>
-      <!-- Location End-->
-
       <!-- FAQ Section Styles -->
       <style>
         .faq-section {
@@ -1142,7 +1023,9 @@
             (Guagua Ave., Madapdap Resettlement, Mabalacat City, Pampanga). The
             reception will follow at Mamita Private Resort, located in Balwarte,
             Mabalacat, Pampanga. Please see the
-            <a href="#location" class="view-details-link">Schedule section</a>
+            <a href="index.html#location" class="view-details-link"
+              >Schedule section</a
+            >
             for the exact time and venue details.
           </div>
 
