--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,6 @@
       * {
         box-sizing: border-box;
       }
-
       body.modal-open .wpo-site-header {
         display: none;
       }
@@ -67,7 +66,6 @@
         text-align: center;
         margin: 40px 0 20px;
       }
-
       .tab-button {
         padding: 10px 18px;
         border: none;
@@ -78,7 +76,6 @@
         font-weight: 500;
         transition: background 0.3s;
       }
-
       .tab-button:hover,
       .tab-button.active {
         background: #7fc1e9;
@@ -90,19 +87,16 @@
         column-gap: 16px;
         padding: 20px;
       }
-
       @media (max-width: 1200px) {
         .gallery {
           column-count: 3;
         }
       }
-
       @media (max-width: 800px) {
         .gallery {
           column-count: 2;
         }
       }
-
       @media (max-width: 500px) {
         .gallery {
           column-count: 1;
@@ -117,14 +111,12 @@
         overflow: hidden;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       }
-
       .gallery-item img {
         width: 100%;
         display: block;
         border-radius: 10px;
         transition: transform 0.3s ease;
       }
-
       .gallery-item:hover img {
         transform: scale(1.03);
       }
@@ -135,7 +127,6 @@
         background: rgba(0, 0, 0, 0);
         transition: background 0.3s ease;
       }
-
       .gallery-item:hover .overlay {
         background: rgba(255, 255, 255, 0.4);
       }
@@ -158,7 +149,6 @@
         align-items: center;
         justify-content: center;
       }
-
       .gallery-item:hover .eye-overlay {
         opacity: 1;
       }
@@ -177,11 +167,9 @@
         overflow: hidden;
         padding: 0;
       }
-
       .modal.open {
         display: flex;
       }
-
       .modal-content-wrapper {
         display: flex;
         align-items: center;
@@ -191,25 +179,12 @@
         max-height: 90vh;
         gap: 10px;
       }
-
-      .modal-content {
-        position: relative;
-        /* background: white; */
-        padding: 0;
-        /* border-radius: 12px; */
-        /* border: 8px solid white; */
-        display: flex;
-        justify-content: center;
-        /* align-items: center; */
-      }
-
       .modal-content img {
         max-width: 80vw;
         max-height: 80vh;
         object-fit: contain;
         display: block;
       }
-
       .modal-close {
         position: absolute;
         top: -15px;
@@ -224,19 +199,14 @@
         cursor: pointer;
         line-height: 36px;
         text-align: center;
-        user-select: none;
-        z-index: 10001;
         display: flex;
         align-items: center;
         justify-content: center;
-        transition: all 0.3s ease;
       }
-
       .modal-close:hover {
         background: red;
         color: white;
       }
-
       .modal-prev,
       .modal-next {
         background: transparent;
@@ -247,31 +217,32 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        transition: color 0.3s ease;
-        height: 100%;
         width: 50px;
-        padding: 0;
-        user-select: none;
+        height: 100%;
       }
-
       .modal-prev:hover,
       .modal-next:hover {
         color: skyblue;
       }
 
-      @media (max-width: 700px) {
-        .modal-prev,
-        .modal-next {
-          font-size: 2.5rem;
-          width: 40px;
-        }
+      /* Image counter at bottom of modal */
+      .modal-counter {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        color: #fff;
+        font-size: 14px;
+        background: rgba(0, 0, 0, 0.6);
+        padding: 4px 10px;
+        border-radius: 12px;
       }
     </style>
   </head>
 
   <body>
     <div class="page-wrapper">
-      <!-- Header (shortened for brevity) -->
+      <!-- Header -->
       <header id="header">
         <div class="wpo-site-header wpo-header-style-3">
           <nav class="navigation navbar navbar-expand-lg navbar-light">
@@ -314,7 +285,7 @@
           </nav>
         </div>
       </header>
-      <!-- end of header -->
+
       <!-- start wpo-page-title -->
       <section class="wpo-page-title">
         <div class="container">
@@ -348,11 +319,6 @@
 
       <!-- Gallery Section -->
       <section class="gallery" id="gallery">
-        <div class="gallery-item" data-year="2019">
-          <img src="assets/images/gallery/1.jpg" alt="Image 1" />
-          <div class="overlay"></div>
-          <div class="eye-overlay"><i class="ti-eye"></i></div>
-        </div>
         <div class="gallery-item" data-year="2019">
           <img src="assets/images/gallery/2.jpg" alt="Image 2" />
           <div class="overlay"></div>
@@ -519,9 +485,11 @@
             <img id="modal-img" src="" alt="" />
           </div>
           <button class="modal-next" id="modal-next">&#10095;</button>
+          <div id="modal-counter" class="modal-counter">0 / 0</div>
         </div>
       </div>
 
+      <!-- Footer -->
       <footer class="wpo-site-footer-s2">
         <div class="wpo-lower-footer">
           <div class="container">
@@ -546,6 +514,7 @@
     </div>
 
     <!-- Scripts -->
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <!-- Plugins for this template -->
@@ -555,23 +524,33 @@
     <script src="assets/js/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-    <!-- Latest to Oldest Pop up -->
+
     <script>
-      const modal = document.getElementById("modal");
-      const modalImg = document.getElementById("modal-img");
-      const closeBtn = document.getElementById("modal-close");
-      const nextBtn = document.getElementById("modal-next");
-      const prevBtn = document.getElementById("modal-prev");
-      let images = Array.from(document.querySelectorAll(".gallery-item img"));
-      let currentIndex = -1;
+      const modal = document.getElementById("modal"),
+        modalImg = document.getElementById("modal-img"),
+        counterEl = document.getElementById("modal-counter"),
+        closeBtn = document.getElementById("modal-close"),
+        nextBtn = document.getElementById("modal-next"),
+        prevBtn = document.getElementById("modal-prev"),
+        galleryContainer = document.querySelector(".gallery"),
+        tabButtons = document.querySelectorAll(".tab-button"),
+        galleryItems = [...document.querySelectorAll(".gallery-item")];
 
-      function openModal(index) {
-        currentIndex = index;
-        modalImg.src = images[index].src;
-        modalImg.alt = images[index].alt;
+      let images = [],
+        currentIndex = -1;
+
+      function updateCounter() {
+        counterEl.textContent = `${currentIndex + 1} / ${images.length}`;
+      }
+
+      function openModal(i) {
+        currentIndex = i;
+        modalImg.src = images[i].src;
+        modalImg.alt = images[i].alt;
         modal.classList.add("open");
         document.body.classList.add("modal-open");
         document.body.style.overflow = "hidden";
+        updateCounter();
       }
 
       function closeModal() {
@@ -582,23 +561,16 @@
       }
 
       function showNext() {
-        currentIndex = (currentIndex + 1) % images.length;
-        openModal(currentIndex);
+        openModal((currentIndex + 1) % images.length);
       }
-
       function showPrev() {
-        currentIndex = (currentIndex - 1 + images.length) % images.length;
-        openModal(currentIndex);
+        openModal((currentIndex - 1 + images.length) % images.length);
       }
 
-      document.querySelectorAll(".eye-overlay").forEach((eye, index) => {
-        eye.addEventListener("click", () => openModal(index));
-      });
-
-      closeBtn.addEventListener("click", closeModal);
-      nextBtn.addEventListener("click", showNext);
-      prevBtn.addEventListener("click", showPrev);
-
+      closeBtn.onclick = closeModal;
+      nextBtn.onclick = showNext;
+      prevBtn.onclick = showPrev;
+      modal.onclick = (e) => e.target === modal && closeModal();
       document.addEventListener("keydown", (e) => {
         if (!modal.classList.contains("open")) return;
         if (e.key === "Escape") closeModal();
@@ -606,122 +578,36 @@
         if (e.key === "ArrowLeft") showPrev();
       });
 
-      modal.addEventListener("click", (e) => {
-        if (e.target === modal) closeModal();
-      });
-
-      // Tabs logic with latest-to-first ordering
-      const tabButtons = document.querySelectorAll(".tab-button");
-      const galleryContainer = document.querySelector(".gallery"); // parent wrapper
-      let galleryItems = Array.from(document.querySelectorAll(".gallery-item"));
+      function renderGallery(year = "all") {
+        let filtered =
+          year === "all"
+            ? [...galleryItems]
+            : galleryItems.filter((i) => i.dataset.year === year);
+        filtered.sort((a, b) => b.dataset.year - a.dataset.year);
+        galleryItems.forEach((i) => (i.style.display = "none"));
+        filtered.forEach((i) => {
+          i.style.display = "block";
+          galleryContainer.appendChild(i);
+        });
+        images = filtered.map((i) => i.querySelector("img"));
+        filtered.forEach((item, i) => {
+          let overlay = item.querySelector(".eye-overlay");
+          if (overlay) overlay.onclick = () => openModal(i);
+        });
+      }
 
       tabButtons.forEach((btn) => {
-        btn.addEventListener("click", () => {
+        btn.onclick = () => {
           tabButtons.forEach((b) => b.classList.remove("active"));
           btn.classList.add("active");
-
-          const selectedYear = btn.getAttribute("data-year");
-
-          // Filter + sort items
-          let filteredItems = galleryItems.filter((item) => {
-            const itemYear = item.getAttribute("data-year");
-            return selectedYear === "all" || selectedYear === itemYear;
-          });
-
-          // Sort descending (latest year first)
-          filteredItems.sort((a, b) => {
-            return (
-              parseInt(b.getAttribute("data-year")) -
-              parseInt(a.getAttribute("data-year"))
-            );
-          });
-
-          // Clear and re-append in sorted order
-          galleryContainer.innerHTML = "";
-          filteredItems.forEach((item) => {
-            galleryContainer.appendChild(item);
-          });
-
-          // Refresh images list for modal navigation
-          images = Array.from(document.querySelectorAll(".gallery-item img"));
-        });
+          renderGallery(btn.dataset.year);
+        };
       });
+
+      document
+        .querySelector('.tab-button[data-year="all"]')
+        ?.classList.add("active");
+      renderGallery("all");
     </script>
-    <!-- Regular Year Popup -->
-    <!-- <script>
-      const modal = document.getElementById("modal");
-      const modalImg = document.getElementById("modal-img");
-      const closeBtn = document.getElementById("modal-close");
-      const nextBtn = document.getElementById("modal-next");
-      const prevBtn = document.getElementById("modal-prev");
-      const images = Array.from(document.querySelectorAll(".gallery-item img"));
-      let currentIndex = -1;
-
-      function openModal(index) {
-        currentIndex = index;
-        modalImg.src = images[index].src;
-        modalImg.alt = images[index].alt;
-        modal.classList.add("open");
-        document.body.classList.add("modal-open");
-        document.body.style.overflow = "hidden";
-      }
-
-      function closeModal() {
-        modal.classList.remove("open");
-        modalImg.src = "";
-        document.body.classList.remove("modal-open");
-        document.body.style.overflow = "";
-      }
-
-      function showNext() {
-        currentIndex = (currentIndex + 1) % images.length;
-        openModal(currentIndex);
-      }
-
-      function showPrev() {
-        currentIndex = (currentIndex - 1 + images.length) % images.length;
-        openModal(currentIndex);
-      }
-
-      document.querySelectorAll(".eye-overlay").forEach((eye, index) => {
-        eye.addEventListener("click", () => openModal(index));
-      });
-
-      closeBtn.addEventListener("click", closeModal);
-      nextBtn.addEventListener("click", showNext);
-      prevBtn.addEventListener("click", showPrev);
-
-      document.addEventListener("keydown", (e) => {
-        if (!modal.classList.contains("open")) return;
-        if (e.key === "Escape") closeModal();
-        if (e.key === "ArrowRight") showNext();
-        if (e.key === "ArrowLeft") showPrev();
-      });
-
-      modal.addEventListener("click", (e) => {
-        if (e.target === modal) closeModal();
-      });
-
-      const tabButtons = document.querySelectorAll(".tab-button");
-      const galleryItems = document.querySelectorAll(".gallery-item");
-
-      tabButtons.forEach((btn) => {
-        btn.addEventListener("click", () => {
-          tabButtons.forEach((b) => b.classList.remove("active"));
-          btn.classList.add("active");
-
-          const selectedYear = btn.getAttribute("data-year");
-
-          galleryItems.forEach((item) => {
-            const itemYear = item.getAttribute("data-year");
-            if (selectedYear === "all" || selectedYear === itemYear) {
-              item.style.display = "block";
-            } else {
-              item.style.display = "none";
-            }
-          });
-        });
-      });
-    </script> -->
   </body>
 </html>
