--- a/gallery.html
+++ b/gallery.html
@@ -430,7 +430,42 @@
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
         <div class="gallery-item" data-year="2022">
+          <img src="assets/images/gallery/7.1.jpg" alt="Image 7.1" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2022">
+          <img src="assets/images/gallery/7.2.jpg" alt="Image 7.2" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2022">
+          <img src="assets/images/gallery/7.3.jpg" alt="Image 7.3" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2022">
+          <img src="assets/images/gallery/7.4.jpg" alt="Image 7.4" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2022">
+          <img src="assets/images/gallery/7.5.jpg" alt="Image 7.5" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2022">
+          <img src="assets/images/gallery/7.6.jpg" alt="Image 7.6" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2022">
           <img src="assets/images/gallery/8.jpg" alt="Image 8" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2022">
+          <img src="assets/images/gallery/8.1.jpg" alt="Image 8.1" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
