--- a/gallery.html
+++ b/gallery.html
@@ -440,10 +440,31 @@
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
         <div class="gallery-item" data-year="2022">
+          <img src="assets/images/gallery/7.2.1.jpg" alt="Image 7.2.1" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2022">
+          <img src="assets/images/gallery/7.2.2.jpg" alt="Image 7.2.2" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2022">
           <img src="assets/images/gallery/7.3.jpg" alt="Image 7.3" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
+        <div class="gallery-item" data-year="2022">
+          <img src="assets/images/gallery/7.3.3.jpg" alt="Image 7.3.3" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2022">
+          <img src="assets/images/gallery/7.3.4.jpg" alt="Image 7.3.4" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2022">
         <div class="gallery-item" data-year="2022">
           <img src="assets/images/gallery/7.4.jpg" alt="Image 7.4" />
           <div class="overlay"></div>
@@ -469,13 +490,48 @@
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
+        <div class="gallery-item" data-year="2022">
+          <img src="assets/images/gallery/8.2.jpg" alt="Image 8.2" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
         <div class="gallery-item" data-year="2023">
           <img src="assets/images/gallery/9.jpg" alt="Image 9" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
         <div class="gallery-item" data-year="2023">
+          <img src="assets/images/gallery/9.1.jpg" alt="Image 9.1" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2023">
+          <img src="assets/images/gallery/9.1.1.jpg" alt="Image 9.1.1" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2023">
+          <img src="assets/images/gallery/9.1.2.jpg" alt="Image 9.1.2" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2023">
+          <img src="assets/images/gallery/9.2.jpg" alt="Image 9.2" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2023">
+          <img src="assets/images/gallery/9.3.jpg" alt="Image 9.3" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2023">
           <img src="assets/images/gallery/10.jpg" alt="Image 10" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2023">
+          <img src="assets/images/gallery/10.1.jpg" alt="Image 10.1" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
