--- a/gallery.html
+++ b/gallery.html
@@ -330,12 +330,23 @@
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
         <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/2.2.jpg" alt="Image 2.2" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+
+        <div class="gallery-item" data-year="2019">
           <img src="assets/images/gallery/1.2.jpg" alt="Image 1.2" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
         <div class="gallery-item" data-year="2019">
           <img src="assets/images/gallery/1.2.1.jpg" alt="Image 1.2.1" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/1.2.2.jpg" alt="Image 1.2.2" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
@@ -355,7 +366,22 @@
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
         <div class="gallery-item" data-year="2020">
+          <img src="assets/images/gallery/3.1.1.jpg" alt="Image 3.1.1" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2020">
           <img src="assets/images/gallery/4.jpg" alt="Image 4" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2020">
+          <img src="assets/images/gallery/4.1.1.jpg" alt="Image 4.1.1" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2020">
+          <img src="assets/images/gallery/4.1.2.jpg" alt="Image 4.1.2" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
@@ -390,12 +416,27 @@
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
         <div class="gallery-item" data-year="2021">
+          <img src="assets/images/gallery/5.1.4.jpg" alt="Image 5.1.4" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2021">
           <img src="assets/images/gallery/5.jpg" alt="Image 5" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
         <div class="gallery-item" data-year="2021">
           <img src="assets/images/gallery/5.1.jpg" alt="Image 5.1" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2021">
+          <img src="assets/images/gallery/5.1.2.jpg" alt="Image 5.1.2" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2021">
+          <img src="assets/images/gallery/5.1.3.jpg" alt="Image 5.1.3" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
@@ -421,6 +462,11 @@
         </div>
         <div class="gallery-item" data-year="2021">
           <img src="assets/images/gallery/6.jpg" alt="Image 6" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2021">
+          <img src="assets/images/gallery/6.1.jpg" alt="Image 6.1" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
@@ -540,6 +586,59 @@
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
+      </div>
+      <div class="gallery-item" data-year="2024">
+        <img src="assets/images/gallery/11.1.jpg" alt="Image 11.1" />
+        <div class="overlay"></div>
+        <div class="eye-overlay"><i class="ti-eye"></i></div>
+      </div>
+    </div>
+    <div class="gallery-item" data-year="2024">
+      <img src="assets/images/gallery/11.2.jpg" alt="Image 11.2" />
+      <div class="overlay"></div>
+      <div class="eye-overlay"><i class="ti-eye"></i></div>
+    </div>
+  </div>
+  <div class="gallery-item" data-year="2024">
+    <img src="assets/images/gallery/11.3.jpg" alt="Image 11.3" />
+    <div class="overlay"></div>
+    <div class="eye-overlay"><i class="ti-eye"></i></div>
+  </div>
+  <div class="gallery-item" data-year="2024">
+    <img src="assets/images/gallery/11.4.jpg" alt="Image 11.4" />
+    <div class="overlay"></div>
+    <div class="eye-overlay"><i class="ti-eye"></i></div>
+  </div>
+  <div class="gallery-item" data-year="2024">
+    <img src="assets/images/gallery/11.5.jpg" alt="Image 11.5" />
+    <div class="overlay"></div>
+    <div class="eye-overlay"><i class="ti-eye"></i></div>
+  </div>
+  <div class="gallery-item" data-year="2024">
+    <img src="assets/images/gallery/11.6.jpg" alt="Image 11.6" />
+    <div class="overlay"></div>
+    <div class="eye-overlay"><i class="ti-eye"></i></div>
+  </div>
+  <div class="gallery-item" data-year="2024">
+    <img src="assets/images/gallery/11.7.jpg" alt="Image 11.7" />
+    <div class="overlay"></div>
+    <div class="eye-overlay"><i class="ti-eye"></i></div>
+  </div>
+  <div class="gallery-item" data-year="2024">
+    <img src="assets/images/gallery/11.8.jpg" alt="Image 11.8" />
+    <div class="overlay"></div>
+    <div class="eye-overlay"><i class="ti-eye"></i></div>
+  </div>
+  <div class="gallery-item" data-year="2024">
+    <img src="assets/images/gallery/11.9.jpg" alt="Image 11.9" />
+    <div class="overlay"></div>
+    <div class="eye-overlay"><i class="ti-eye"></i></div>
+  </div>
+  <div class="gallery-item" data-year="2024">
+    <img src="assets/images/gallery/11.10.jpg" alt="Image 11.10" />
+    <div class="overlay"></div>
+    <div class="eye-overlay"><i class="ti-eye"></i></div>
+  </div>
         <div class="gallery-item" data-year="2025">
           <img src="assets/images/gallery/12.jpg" alt="Image 12" />
           <div class="overlay"></div>
