--- a/gallery.html
+++ b/gallery.html
@@ -334,7 +334,24 @@
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
-
+        <section class="gallery" id="gallery">
+          <div class="gallery-item" data-year="2019">
+            <img src="assets/images/gallery/2.3.jpg" alt="Image 2.3" />
+            <div class="overlay"></div>
+            <div class="eye-overlay"><i class="ti-eye"></i></div>
+          </div>
+          <section class="gallery" id="gallery">
+            <div class="gallery-item" data-year="2019">
+              <img src="assets/images/gallery/2.4.jpg" alt="Image 2.4" />
+              <div class="overlay"></div>
+              <div class="eye-overlay"><i class="ti-eye"></i></div>
+            </div>
+            <section class="gallery" id="gallery">
+              <div class="gallery-item" data-year="2019">
+                <img src="assets/images/gallery/2.5.jpg" alt="Image 2.5" />
+                <div class="overlay"></div>
+                <div class="eye-overlay"><i class="ti-eye"></i></div>
+              </div>
         <div class="gallery-item" data-year="2019">
           <img src="assets/images/gallery/1.2.jpg" alt="Image 1.2" />
           <div class="overlay"></div>
