--- a/gallery.html
+++ b/gallery.html
@@ -388,6 +388,16 @@
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
         <div class="gallery-item" data-year="2020">
+          <img src="assets/images/gallery/3.1.2.jpg" alt="Image 3.1.2" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2020">
+          <img src="assets/images/gallery/3.1.3.jpg" alt="Image 3.1.3" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2020">
           <img src="assets/images/gallery/4.jpg" alt="Image 4" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
