--- a/gallery.html
+++ b/gallery.html
@@ -329,6 +329,12 @@
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
+        <section class="gallery" id="gallery">
+          <div class="gallery-item" data-year="2019">
+            <img src="assets/images/gallery/2..8.jpg" alt="Image 2.8" />
+            <div class="overlay"></div>
+            <div class="eye-overlay"><i class="ti-eye"></i></div>
+          </div>
         <div class="gallery-item" data-year="2019">
           <img src="assets/images/gallery/2.2.jpg" alt="Image 2.2" />
           <div class="overlay"></div>
@@ -352,6 +358,18 @@
                 <div class="overlay"></div>
                 <div class="eye-overlay"><i class="ti-eye"></i></div>
               </div>
+              <section class="gallery" id="gallery">
+                <div class="gallery-item" data-year="2019">
+                  <img src="assets/images/gallery/2.6.jpg" alt="Image 2.6" />
+                  <div class="overlay"></div>
+                  <div class="eye-overlay"><i class="ti-eye"></i></div>
+                </div>
+                <section class="gallery" id="gallery">
+                  <div class="gallery-item" data-year="2019">
+                    <img src="assets/images/gallery/2.7.jpg" alt="Image 2.8" />
+                    <div class="overlay"></div>
+                    <div class="eye-overlay"><i class="ti-eye"></i></div>
+                  </div>
         <div class="gallery-item" data-year="2019">
           <img src="assets/images/gallery/1.2.jpg" alt="Image 1.2" />
           <div class="overlay"></div>
@@ -673,6 +691,16 @@
         </div>
         <div class="gallery-item" data-year="2019">
           <img src="assets/images/gallery/13.jpg" alt="Image 13" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/13.1.jpg" alt="Image 13.1" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/13.2.jpg" alt="Image 13.2" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
