Still under construction

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                         <a href="#story">Story</a>
                       </li>
                       <li>
+                        <a href="#std">STD</a>
+                      </li>
+                      <li>
                         <a href="#gallery">Gallery</a>
                       </li>
                       <li>
@@ -564,6 +567,26 @@
         </div>
       </section>
       <!-- end story-section -->
+
+        <!-- start wpo-video-section -->
+        <section class="wpo-video-section section-padding" id="std">
+            <h2 class="hidden">some</h2>
+            <div class="container">
+               <div class="wpo-section-title">
+            <span>Save the Date</span>
+            <h2>Forever Starts Here</h2>
+          </div>
+          <div class="video-wrap">
+              <img src="assets/images/video-img/img-2.jpg" alt="">
+              <a href="https://www.youtube.com/embed/iDT9yXeiVKI" 
+                class="video-btn" 
+                data-type="iframe">
+                  <i class="fi flaticon-play"></i>
+              </a>
+          </div>
+            </div>
+        </section>
+        <!-- end wpo-video-section-->
 
       <!-- start wpo-portfolio-section -->
       <section class="wpo-portfolio-section section-padding" id="gallery">
