--- a/groom-bride.html
+++ b/groom-bride.html
@@ -298,7 +298,7 @@
                     </div>
                   </div>
                   <div class="wpo-team-text">
-                    <h3>Gloria Dulu</h3>
+                    <h3>Charlene Layug</h3>
                     <span>Groom's Mother</span>
                   </div>
                 </div>
