--- a/index.html
+++ b/index.html
@@ -569,23 +569,23 @@
       <!-- end story-section -->
 
         <!-- start wpo-video-section -->
-        <section class="wpo-video-section section-padding" id="std">
-            <h2 class="hidden">some</h2>
-            <div class="container">
-               <div class="wpo-section-title">
-            <span>Save the Date</span>
-            <h2>Forever Starts Here</h2>
+      <section class="wpo-video-section section-padding" id="std">
+          <h2 class="hidden">some</h2>
+          <div class="container">
+              <div class="wpo-section-title">
+                  <span>Save the Date</span>
+                  <h2>Forever Starts Here</h2>
+              </div>
+              <div class="video-wrap">
+                  <img src="assets/images/video-img/img-2.jpg" alt="">
+                  <a href="https://www.youtube.com/embed/iDT9yXeiVKI?rel=0" 
+                    class="video-btn" 
+                    data-type="iframe">
+                      <i class="fi flaticon-play"></i>
+                  </a>
+              </div>
           </div>
-          <div class="video-wrap">
-              <img src="assets/images/video-img/img-2.jpg" alt="">
-              <a href="https://www.youtube.com/embed/iDT9yXeiVKI" 
-                class="video-btn" 
-                data-type="iframe">
-                  <i class="fi flaticon-play"></i>
-              </a>
-          </div>
-            </div>
-        </section>
+      </section>
         <!-- end wpo-video-section-->
 
       <!-- start wpo-portfolio-section -->
