--- a/index.html
+++ b/index.html
@@ -200,6 +200,29 @@
                       <img src="assets/images/slider/shape2.svg" alt="" />
                     </div>
                     <div class="clearfix"></div>
+                    <!-- Modern Scroll/Arrow Indicator -->
+                    <div class="modernScrollIndicator" aria-hidden="true">
+                      <!-- Desktop Mouse + Text -->
+                      <div class="msi-mouse-text">
+                        <div class="msi-mouse">
+                          <div class="msi-wheel"></div>
+                        </div>
+                        <span class="msi-text">Our forever starts here</span>
+                      </div>
+
+                      <!-- Mobile Modern SVG Arrow -->
+                      <div class="msi-mobile-arrow">
+                        <svg class="msi-modern-arrow" viewBox="0 0 24 24">
+                          <path
+                            d="M6 9l6 6 6-6"
+                            stroke="#7FC1E9"
+                            stroke-width="2"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          />
+                        </svg>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -568,25 +591,27 @@
       </section>
       <!-- end story-section -->
 
-        <!-- start wpo-video-section -->
+      <!-- start wpo-video-section -->
       <section class="wpo-video-section section-padding" id="std">
-          <h2 class="hidden">some</h2>
-          <div class="container">
-              <div class="wpo-section-title">
-                  <span>Save the Date</span>
-                  <h2>Forever Starts Here</h2>
-              </div>
-              <div class="video-wrap">
-                  <img src="assets/images/video-img/img-2.jpg" alt="">
-                  <a href="https://www.youtube.com/embed/iDT9yXeiVKI?rel=0" 
-                    class="video-btn" 
-                    data-type="iframe">
-                      <i class="fi flaticon-play"></i>
-                  </a>
-              </div>
+        <h2 class="hidden">some</h2>
+        <div class="container">
+          <div class="wpo-section-title">
+            <span>Save the Date</span>
+            <h2>Forever Starts Here</h2>
           </div>
+          <div class="video-wrap">
+            <img src="assets/images/video-img/img-2.jpg" alt="" />
+            <a
+              href="https://www.youtube.com/embed/iDT9yXeiVKI?rel=0"
+              class="video-btn"
+              data-type="iframe"
+            >
+              <i class="fi flaticon-play"></i>
+            </a>
+          </div>
+        </div>
       </section>
-        <!-- end wpo-video-section-->
+      <!-- end wpo-video-section-->
 
       <!-- start wpo-portfolio-section -->
       <section class="wpo-portfolio-section section-padding" id="gallery">
@@ -1405,6 +1430,7 @@
                                                     ================================================== -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/jsi-scroll-indicator.js"></script>
     <!-- Plugins for this template -->
     <script src="assets/js/modernizr.custom.js"></script>
     <script src="assets/js/jquery.pointparallax.min.js"></script>
