--- a/wedguide.html
+++ b/wedguide.html
@@ -187,6 +187,29 @@
                         than words can ever express.
                       </p>
                     </div>
+                    <!-- Modern Scroll/Arrow Indicator -->
+                    <div class="modernScrollIndicator" aria-hidden="true">
+                      <!-- Desktop Mouse + Text -->
+                      <div class="msi-mouse-text">
+                        <div class="msi-mouse">
+                          <div class="msi-wheel"></div>
+                        </div>
+                        <span class="msi-text">Our forever starts here</span>
+                      </div>
+
+                      <!-- Mobile Modern SVG Arrow -->
+                      <div class="msi-mobile-arrow">
+                        <svg class="msi-modern-arrow" viewBox="0 0 24 24">
+                          <path
+                            d="M6 9l6 6 6-6"
+                            stroke="#7FC1E9"
+                            stroke-width="2"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          />
+                        </svg>
+                      </div>
+                    </div>
                     <div
                       class="shape-2 wow fadeInUp"
                       data-wow-duration="1800ms"
@@ -1266,6 +1289,7 @@
     <!-- Custom script for this template -->
     <script src="assets/js/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="assets/js/jsi-scroll-indicator.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script>
       $(document).ready(function () {
