--- a/gallery.html
+++ b/gallery.html
@@ -403,6 +403,44 @@
               </div>
             </div>
 
+            <div class="grid y2025">
+              <div class="img-holder">
+                <a
+                  href="assets/images/gallery/16.2.jpg"
+                  class="fancybox"
+                  data-fancybox-group="gall-1"
+                >
+                  <img src="assets/images/gallery/16.2.jpg" alt="" />
+                  <div class="hover-content"><i class="ti-eye"></i></div>
+                </a>
+              </div>
+            </div>
+
+            <div class="grid y2025">
+              <div class="img-holder">
+                <a
+                  href="assets/images/gallery/16.3.jpg"
+                  class="fancybox"
+                  data-fancybox-group="gall-1"
+                >
+                  <img src="assets/images/gallery/16.3.jpg" alt="" />
+                  <div class="hover-content"><i class="ti-eye"></i></div>
+                </a>
+              </div>
+            </div>
+
+            <div class="grid y2025">
+              <div class="img-holder">
+                <a
+                  href="assets/images/gallery/16.4.jpg"
+                  class="fancybox"
+                  data-fancybox-group="gall-1"
+                >
+                  <img src="assets/images/gallery/16.4.jpg" alt="" />
+                  <div class="hover-content"><i class="ti-eye"></i></div>
+                </a>
+              </div>
+            </div>
             <!-- 2024 NEW IMAGES -->
 
             <div class="grid y2024">
@@ -418,7 +456,6 @@
               </div>
             </div>
 
-            <!-- 2024 NEW IMAGES -->
             <div class="grid y2024">
               <div class="img-holder">
                 <a
