--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
                 <!-- RSVP Form -->
                 <div class="wpo-contact-form-area" id="rsvp-form-area">
                   <form
-                    action="https://formbold.com/s/3N7yN"
+                    action="https://formbold.com/s/3dkwG"
                     method="POST"
                     class="contact-validation-active"
                     id="contact-form-main"
