--- a/gallery.html
+++ b/gallery.html
@@ -441,6 +441,150 @@
                 </a>
               </div>
             </div>
+
+            <div class="grid y2025">
+              <div class="img-holder">
+                <a
+                  href="assets/images/gallery/16.5.jpg"
+                  class="fancybox"
+                  data-fancybox-group="gall-1"
+                >
+                  <img src="assets/images/gallery/16.5.jpg" alt="" />
+                  <div class="hover-content"><i class="ti-eye"></i></div>
+                </a>
+              </div>
+            </div>
+
+            <div class="grid y2025">
+              <div class="img-holder">
+                <a
+                  href="assets/images/gallery/16.6.jpg"
+                  class="fancybox"
+                  data-fancybox-group="gall-1"
+                >
+                  <img src="assets/images/gallery/16.6.jpg" alt="" />
+                  <div class="hover-content"><i class="ti-eye"></i></div>
+                </a>
+              </div>
+            </div>
+
+            <div class="grid y2025">
+              <div class="img-holder">
+                <a
+                  href="assets/images/gallery/16.7.jpg"
+                  class="fancybox"
+                  data-fancybox-group="gall-1"
+                >
+                  <img src="assets/images/gallery/16.7.jpg" alt="" />
+                  <div class="hover-content"><i class="ti-eye"></i></div>
+                </a>
+              </div>
+            </div>
+
+            <div class="grid y2025">
+              <div class="img-holder">
+                <a
+                  href="assets/images/gallery/16.8.jpg"
+                  class="fancybox"
+                  data-fancybox-group="gall-1"
+                >
+                  <img src="assets/images/gallery/16.8.jpg" alt="" />
+                  <div class="hover-content"><i class="ti-eye"></i></div>
+                </a>
+              </div>
+            </div>
+
+            <div class="grid y2025">
+              <div class="img-holder">
+                <a
+                  href="assets/images/gallery/16.9.jpg"
+                  class="fancybox"
+                  data-fancybox-group="gall-1"
+                >
+                  <img src="assets/images/gallery/16.9.jpg" alt="" />
+                  <div class="hover-content"><i class="ti-eye"></i></div>
+                </a>
+              </div>
+            </div>
+
+            <div class="grid y2025">
+              <div class="img-holder">
+                <a
+                  href="assets/images/gallery/17.0.jpg"
+                  class="fancybox"
+                  data-fancybox-group="gall-1"
+                >
+                  <img src="assets/images/gallery/17.0.jpg" alt="" />
+                  <div class="hover-content"><i class="ti-eye"></i></div>
+                </a>
+              </div>
+            </div>
+
+            <div class="grid y2025">
+              <div class="img-holder">
+                <a
+                  href="assets/images/gallery/17.1.jpg"
+                  class="fancybox"
+                  data-fancybox-group="gall-1"
+                >
+                  <img src="assets/images/gallery/17.1.jpg" alt="" />
+                  <div class="hover-content"><i class="ti-eye"></i></div>
+                </a>
+              </div>
+            </div>
+
+            <div class="grid y2025">
+              <div class="img-holder">
+                <a
+                  href="assets/images/gallery/17.2.jpg"
+                  class="fancybox"
+                  data-fancybox-group="gall-1"
+                >
+                  <img src="assets/images/gallery/17.2.jpg" alt="" />
+                  <div class="hover-content"><i class="ti-eye"></i></div>
+                </a>
+              </div>
+            </div>
+
+            <div class="grid y2025">
+              <div class="img-holder">
+                <a
+                  href="assets/images/gallery/17.3.jpg"
+                  class="fancybox"
+                  data-fancybox-group="gall-1"
+                >
+                  <img src="assets/images/gallery/17.3.jpg" alt="" />
+                  <div class="hover-content"><i class="ti-eye"></i></div>
+                </a>
+              </div>
+            </div>
+
+            <div class="grid y2025">
+              <div class="img-holder">
+                <a
+                  href="assets/images/gallery/17.4.jpg"
+                  class="fancybox"
+                  data-fancybox-group="gall-1"
+                >
+                  <img src="assets/images/gallery/17.4.jpg" alt="" />
+                  <div class="hover-content"><i class="ti-eye"></i></div>
+                </a>
+              </div>
+            </div>
+
+            <div class="grid y2025">
+              <div class="img-holder">
+                <a
+                  href="assets/images/gallery/17.5.jpg"
+                  class="fancybox"
+                  data-fancybox-group="gall-1"
+                >
+                  <img src="assets/images/gallery/17.5.jpg" alt="" />
+                  <div class="hover-content"><i class="ti-eye"></i></div>
+                </a>
+              </div>
+            </div>
+
             <!-- 2024 NEW IMAGES -->
 
             <div class="grid y2024">
