--- a/wedguide.html
+++ b/wedguide.html
@@ -807,9 +807,8 @@
                   <div class="wpo-service-text text-center mt-2">
                     <h4>Principal Sponsors</h4>
                     <p>
-                      Ninangs may wear gowns in powder blue, silver, or pastel
-                      shades. Ninongs should wear Barong or suits with pastel
-                      blue accents.
+                      Ninangs may wear gowns in dusty blue, shades. Ninongs
+                      should wear suits with dusty blue color.
                     </p>
                   </div>
                 </div>
@@ -831,8 +830,8 @@
                   <div class="wpo-service-text text-center mt-2">
                     <h4>Bridesmen & Groomsmen</h4>
                     <p>
-                      Coordinated formalwear is required. Suits or Barong paired
-                      with powder blue ties or accessories are preferred.
+                      Coordinated formalwear is required. powder/Suit paired
+                      with blue ties or accessories are preferred.
                     </p>
                   </div>
                 </div>
